--- a/modelosClasicos/WebRoot/xhtml/template/commonHeader.xhtml
+++ b/modelosClasicos/WebRoot/xhtml/template/commonHeader.xhtml
@@ -54,9 +54,9 @@
 			        </p:submenu>  
 			        
 			        <f:facet name="options">  
-			        	<p:outputLabel id="saludo" value="Bienvenido, Raúl  "></p:outputLabel>
+			        	<p:outputLabel id="saludo" value="Bienvenido, #{loginBean.nombre}  "></p:outputLabel>
 			            <!-- <p:inputText style="margin-right:10px"/> -->  
-			            <p:commandButton type="button" value="Logout" icon="ui-icon-extlink"/>  
+			            <p:commandButton type="button" value="Logout" icon="ui-icon-extlink" action="#{loginBean.logout}" ajax="false"/>  
 			        </f:facet>  
 			        
 			        
