--- a/modelosClasicos/WebRoot/xhtml/template/commonHeader.xhtml
+++ b/modelosClasicos/WebRoot/xhtml/template/commonHeader.xhtml
@@ -53,10 +53,11 @@
 			            </p:submenu>  
 			        </p:submenu>  
 			        
+			        <p:menuitem value="Logut" icon="ui-icon-extlink" action="#{loginBean.logout}" ajax="false" url="/"></p:menuitem>
 			        <f:facet name="options">  
 			        	<p:outputLabel id="saludo" value="Bienvenido, #{loginBean.nombre}  "></p:outputLabel>
 			            <!-- <p:inputText style="margin-right:10px"/> -->  
-			            <p:commandButton type="button" value="Logout" icon="ui-icon-extlink" action="#{loginBean.logout}"/>  
+			            <p:menuitem value="Logout" icon="ui-icon-extlink" action="#{loginBean.logout}" ajax="false" url="/"/>  
 			        </f:facet>  
 			        
 			        
